logs/robophisher.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyRIC-0.1.6.3.egg-info'...
Listing './lib/python3.5/site-packages/pbkdf2-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyric'...
Listing './lib/python3.5/site-packages/pyric/lib'...
Listing './lib/python3.5/site-packages/pyric/net'...
Listing './lib/python3.5/site-packages/pyric/net/wireless'...
Listing './lib/python3.5/site-packages/pyric/nlhelp'...
Listing './lib/python3.5/site-packages/pyric/utils'...
Listing './lib/python3.5/site-packages/pyric/utils/data'...
Listing './lib/python3.5/site-packages/robophisher'...
Listing './lib/python3.5/site-packages/robophisher/common'...
Listing './lib/python3.5/site-packages/robophisher/data'...
Listing './lib/python3.5/site-packages/robophisher/data/cert'...
Listing './lib/python3.5/site-packages/robophisher/data/locs'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/firmware-upgrade'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/firmware-upgrade/static'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/oauth-login'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/oauth-login/css'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/oauth-login/js'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/oauth-login/static'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/oauth-login/static/css'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/oauth-login/static/js'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/css'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/images'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/js'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/static'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/static/css'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/static/images'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/static/js'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/static/update'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/plugin_update/update'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/wifi_connect'...
Listing './lib/python3.5/site-packages/robophisher/data/phishing-pages/wifi_connect/static'...
Listing './lib/python3.5/site-packages/robophisher/extensions'...
Compiling './lib/python3.5/site-packages/robophisher/pyrobophisher.py'...
***   File "./lib/python3.5/site-packages/robophisher/pyrobophisher.py", line 315
    print '[' + R + '!' + W + '] Closing'
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robophisher-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/roguehostapd'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd/logwatch'...
Compiling './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd/wps-ap-nfc.py'...
***   File "./lib/python3.5/site-packages/roguehostapd/hostapd-2.6/hostapd/wps-ap-nfc.py", line 29
    print txt
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/ap'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/common'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/crypto'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/drivers'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eap_common'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eap_peer'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eap_server'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eapol_auth'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/eapol_supp'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/fst'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/l2_packet'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/p2p'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/pae'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/radius'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/rsn_supp'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/tls'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/utils'...
Listing './lib/python3.5/site-packages/roguehostapd/hostapd-2.6/src/wps'...
Listing './lib/python3.5/site-packages/roguehostapd-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
